important manual update

--- a/quality_check/pages/disjointed_geometries_kerbs.html
+++ b/quality_check/pages/disjointed_geometries_kerbs.html
@@ -28,6 +28,7 @@
         <h2>  
         
             <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/disjointed_geometries_kerbs.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/json/disjointed_geometries_kerbs.json"> You can also access the raw .json </a>
 
         </h2>
 
@@ -65,13 +66,13 @@
 <tr><td><a href=https://www.openstreetmap.org/node/9986507243>9986507243</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/10053848310>10053848310</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/12395490254>12395490254</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/24576715>24576715</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/546907163>546907163</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/663373649>663373649</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/685999195>685999195</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/1206041816>1206041816</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/1225297542>1225297542</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/1332734443>1332734443</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/24576715>24576715</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/546907163>546907163</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/663373649>663373649</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/685999195>685999195</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1206041816>1206041816</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1225297542>1225297542</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1332734443>1332734443</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are generally drawn at the top of crossings, check the map</td></tr>
 
 
         </table>
