--- a/quality_check/pages/disjointed_geometries_other_footways.html
+++ b/quality_check/pages/disjointed_geometries_other_footways.html
@@ -28,6 +28,7 @@
         <h2>  
         
             <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/disjointed_geometries_other_footways.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/json/disjointed_geometries_other_footways.json"> You can also access the raw .json </a>
 
         </h2>
 
