--- a/quality_check/pages/improper_geometries_kerbs.html
+++ b/quality_check/pages/improper_geometries_kerbs.html
@@ -28,6 +28,7 @@
         <h2>  
         
             <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/improper_geometries_kerbs.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/json/improper_geometries_kerbs.json"> You can also access the raw .json </a>
 
         </h2>
 
@@ -41,19 +42,19 @@
     <th><b>key</b></th>
     <th><b>value</b></th>
     <th><b>commentary</b></th>
-    </tr><tr><td><a href=https://www.openstreetmap.org/way/659241105>659241105</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/953197237>953197237</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/953199745>953199745</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/955490104>955490104</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/955508034>955508034</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/955508035>955508035</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/957980150>957980150</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/1070027466>1070027466</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/1070027467>1070027467</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/1070027468>1070027468</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/1070738461>1070738461</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/1074627503>1074627503</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
-<tr><td><a href=https://www.openstreetmap.org/way/1195429846>1195429846</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+    </tr><tr><td><a href=https://www.openstreetmap.org/node/659241105>659241105</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/953197237>953197237</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/953199745>953199745</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/955490104>955490104</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/955508034>955508034</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/955508035>955508035</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/957980150>957980150</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/1070027466>1070027466</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/1070027467>1070027467</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/1070027468>1070027468</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/1070738461>1070738461</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/1074627503>1074627503</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
+<tr><td><a href=https://www.openstreetmap.org/node/1195429846>1195429846</a></td><td>not appliable</td><td>not appliable</td><td>kerbs are mostly points, but in few places people map also the whole 'kerb line' </td></tr>
 
 
         </table>
