--- a/quality_check/pages/improper_geometries_sidewalks.html
+++ b/quality_check/pages/improper_geometries_sidewalks.html
@@ -28,6 +28,7 @@
         <h2>  
         
             <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/improper_geometries_sidewalks.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/json/improper_geometries_sidewalks.json"> You can also access the raw .json </a>
 
         </h2>
 
@@ -41,8 +42,8 @@
     <th><b>key</b></th>
     <th><b>value</b></th>
     <th><b>commentary</b></th>
-    </tr><tr><td><a href=https://www.openstreetmap.org/node/9780133036>9780133036</a></td><td>not appliable</td><td>not appliable</td><td>Sidewalks are meant to be lines</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/9823403602>9823403602</a></td><td>not appliable</td><td>not appliable</td><td>Sidewalks are meant to be lines</td></tr>
+    </tr><tr><td><a href=https://www.openstreetmap.org/way/9780133036>9780133036</a></td><td>not appliable</td><td>not appliable</td><td>Sidewalks are meant to be lines</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/9823403602>9823403602</a></td><td>not appliable</td><td>not appliable</td><td>Sidewalks are meant to be lines</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/369444924>369444924</a></td><td>not appliable</td><td>not appliable</td><td>Sidewalks are meant to be lines</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/422430196>422430196</a></td><td>not appliable</td><td>not appliable</td><td>Sidewalks are meant to be lines</td></tr>
 
