--- a/quality_check/pages/improper_keys_kerbs.html
+++ b/quality_check/pages/improper_keys_kerbs.html
@@ -28,6 +28,7 @@
         <h2>  
         
             <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/improper_keys_kerbs.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/json/improper_keys_kerbs.json"> You can also access the raw .json </a>
 
         </h2>
 
@@ -133,10 +134,10 @@
 <tr><td><a href=https://www.openstreetmap.org/node/9986507242>9986507242</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/9986507243>9986507243</a></td><td>crossing</td><td>marked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/10053848310>10053848310</a></td><td>crossing</td><td>traffic_signals</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/24576715>24576715</a></td><td>crossing</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/659241105>659241105</a></td><td>crossing</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/953199745>953199745</a></td><td>crossing</td><td>unmarked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/1195429846>1195429846</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/24576715>24576715</a></td><td>crossing</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/659241105>659241105</a></td><td>crossing</td><td>zebra</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/953199745>953199745</a></td><td>crossing</td><td>unmarked</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1195429846>1195429846</a></td><td>crossing</td><td>uncontrolled</td><td>It's inappropriate for Kerbs, it's for crossings</td></tr>
 
 
         </table>
