--- a/quality_check/pages/wrong_mispelled_or_unlisted_values_kerbs.html
+++ b/quality_check/pages/wrong_mispelled_or_unlisted_values_kerbs.html
@@ -28,6 +28,7 @@
         <h2>  
         
             <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/wrong_mispelled_or_unlisted_values_kerbs.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/json/wrong_mispelled_or_unlisted_values_kerbs.json"> You can also access the raw .json </a>
 
         </h2>
 
@@ -54,8 +55,8 @@
 <tr><td><a href=https://www.openstreetmap.org/node/8890907326>8890907326</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8891106244>8891106244</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 <tr><td><a href=https://www.openstreetmap.org/node/8891106246>8891106246</a></td><td>kerb</td><td>regular</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/1070027466>1070027466</a></td><td>kerb</td><td>barrier=kerb</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/1070027467>1070027467</a></td><td>kerb</td><td>barrier=kerb</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1070027466>1070027466</a></td><td>kerb</td><td>barrier=kerb</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1070027467>1070027467</a></td><td>kerb</td><td>barrier=kerb</td><td>unlisted at accepted/known values, probably wrong/misspelled</td></tr>
 
 
         </table>
