--- a/quality_check/pages/improper_keys_crossings.html
+++ b/quality_check/pages/improper_keys_crossings.html
@@ -28,6 +28,7 @@
         <h2>  
         
             <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/improper_keys_crossings.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/json/improper_keys_crossings.json"> You can also access the raw .json </a>
 
         </h2>
 
