--- a/quality_check/pages/invalid_characters_kerbs.html
+++ b/quality_check/pages/invalid_characters_kerbs.html
@@ -28,6 +28,7 @@
         <h2>  
         
             <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/invalid_characters_kerbs.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/json/invalid_characters_kerbs.json"> You can also access the raw .json </a>
 
         </h2>
 
@@ -42,8 +43,8 @@
     <th><b>value</b></th>
     <th><b>commentary</b></th>
     </tr><tr><td><a href=https://www.openstreetmap.org/node/8842953120>8842953120</a></td><td>ANY (check at feature link)</td><td>lowered=no</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/1070027466>1070027466</a></td><td>ANY (check at feature link)</td><td>barrier=kerb</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
-<tr><td><a href=https://www.openstreetmap.org/node/1070027467>1070027467</a></td><td>ANY (check at feature link)</td><td>barrier=kerb</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1070027466>1070027466</a></td><td>ANY (check at feature link)</td><td>barrier=kerb</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1070027467>1070027467</a></td><td>ANY (check at feature link)</td><td>barrier=kerb</td><td>The '=' character is used ONLY in textual representation of tags to separate the key from the value</td></tr>
 
 
         </table>
