--- a/quality_check/pages/wrong_mispelled_or_unlisted_values_sidewalks.html
+++ b/quality_check/pages/wrong_mispelled_or_unlisted_values_sidewalks.html
@@ -28,6 +28,7 @@
         <h2>  
         
             <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/wrong_mispelled_or_unlisted_values_sidewalks.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/json/wrong_mispelled_or_unlisted_values_sidewalks.json"> You can also access the raw .json </a>
 
         </h2>
 
