--- a/map.html
+++ b/map.html
@@ -150,6 +150,7 @@
             background: transparent;
             border-radius: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            overflow: hidden; /* avoid internal iframe scrollbars */
         }
         
     </style>
@@ -456,19 +457,19 @@
                         try {
                             const doc = legendIframe.contentDocument || legendIframe.contentWindow?.document;
                             if (!doc) return;
-                            // Measure content size
-                            const body = doc.body;
-                            const html = doc.documentElement;
-                            // Prefer the visible height (client/offset) to respect child's own max-height
-                            const visibleHeight = Math.max(
-                                body.clientHeight,
-                                html.clientHeight,
-                                body.offsetHeight,
-                                html.offsetHeight
-                            );
-                            // Clamp height to 70vh (matches CSS max-height)
+                // Measure content height from body only to avoid feedback loops
+                const body = doc.body;
+                            // Reset iframe height to auto before measuring to avoid compounding
+                            legendIframe.style.height = 'auto';
+                            const contentHeight = body.offsetHeight; // visible height (respects child's own layout)
+                            if (!contentHeight) {
+                                // Try again shortly if content not ready/visible
+                                setTimeout(resizeLegendIframe, 50);
+                                return;
+                            }
+                // Clamp height to 70vh (matches CSS max-height)
                             const maxH = Math.floor(window.innerHeight * 0.7);
-                            const newH = Math.min(visibleHeight, maxH);
+                const newH = Math.min(contentHeight, maxH);
                             legendIframe.style.height = newH + 'px';
                         } catch (e) {
                             // silently ignore cross-origin errors (shouldn't happen for same-origin files)
